i have a square that moves

--- a/index.html
+++ b/index.html
@@ -6,8 +6,12 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Document</title>
   <script src="keyboarder.js" defer></script>
+  <script src="main.js" defer></script>
 </head>
 <body>
-  
+  <div class="gameDiv">
+    <h1>The Square</h1>
+    <canvas id="canvas" style="border: 10px solid blue;"></canvas>
+  </div>
 </body>
 </html>
