I have squares on the board, need to make enemies and make them move

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
   <div class="gameDiv">
-    <h1>The Square</h1>
+    <h1>The Squarrrrre</h1>
     <canvas id="canvas" style="border: 10px solid blue;"></canvas>
   </div>
 </body>
